--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,8 +127,8 @@ h5{
     width: 500px;
     display: block;
     border-radius: 10px;
-    height: 350px;
-    margin: -175px 0 0 -250px;
+    height: 300px;
+    margin: -150px 0 0 -250px;
 }
 .form_guide_text{
     padding-top:2.5px;
@@ -143,7 +143,7 @@ h5{
 
 .img_guide{
     height: 180px;
-width: 200px;
+/* width: 200px; */
 }
 .content-form{
    
@@ -591,7 +591,7 @@ width: 200px;
 .form_popup{
 width: 70%;
     height: 40%;
-    background: rgba(0, 0, 0, 0.667);;
+    background: rgba(34, 55, 113, 0.69);
     margin: auto;
     top:30%;
     padding:2rem;
@@ -618,7 +618,7 @@ width: 70%;
     color:#fff;
 }
 .btn_close_map{
-    color:#000;
+    /* color:#000; */
 }
 .info_information, .info_infomation_image{
     position: fixed;
@@ -977,7 +977,7 @@ cursor: pointer;
     height: 40%;
     margin: auto;
     background-color: rgb(255, 255, 255);
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: rgb(0 0 0) 0px 0px 7.2px;
   height: 500px;
   position: absolute;
